# pm2flipper

./: .gitignore  .pre-commit-config.yaml  Cargo.lock.license  Cargo.toml  README.md
.reuse/templates/: rust.commented.jinja2
src/: error.rs  main.rs
src/card/: mfcard.rs  mfu.rs  mod.rs
