# SPDX-FileCopyrightText: 2022 perillamint
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "pm2flipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
thiserror = "1"
clap = { version = "3.2.22", features = ["derive"] }
